# sentiment-analysis-luigi

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  prestart.sh  pyproject.toml
app/: config.py  main.py  run_pipeline.py
app/src/: classifier.py  preprocess.py  vector.py
app/src/api/: api.py  dependencies.py
app/src/api/control/: api.py
app/src/api/root/: api.py
app/src/api/sentiment/: api.py
app/src/pipeline/: dataset.py  entrypoint.py  preprocessing.py  train_classifier.py  weighting.py
app/src/utils/: preprocess.py  wrapper.py
dataset/: dataset.csv
preprocessed_dataset/: preprocessed_dataset-2020-12-11.csv
scripts/: start_pipeline.sh
